--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
 /* Base */
-body {
-  background-color: #333;
+
+h1, h2 {
   margin: 0;
   padding: 0;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #333;
 
   font-size: 15px;
   font-family: 'Roboto', sans-serif;
@@ -10,30 +16,97 @@ body {
 
 /* Intro */
 
-.intro {
-  position: relative;
-  overflow: hidden;
-  background-size: cover;
+.logo {
+  position: absolute;
+  margin: 50px 100px;
+  z-index: 3;
 
-  height: 100vh;
+  font-weight: 300;
+  color: #348;
+
+}
+
+.intro {
+  max-height: 100vh;
+  overflow: hidden;
+  position: relative;
+
+  background-size: cover;
 }
 
 .intro:after {
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   height: 100%;
+
+  background-color: rgba(0, 0, 0, .9);
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
+
+.intro__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
+}
+
+.intro__title {
+  color: #fff;
+  font-size: 100px;
+
+  line-height: 1;
+}
+
+.intro__subtitle {
+  color: #fff;
+  font-size: 35px;
+
+  font-weight: 300;
+}
+
+.intro__button {
+  position: relative;
+  bottom: -30px;
+  padding: 8px 20px;
+  border: solid #fff 1px;
+  text-decoration: none;
+  color: #fff;
+
+  transition: color .2s linear, border .2s linear;
+
+  margin: 0 auto;
+}
+
+.intro__button:hover {
+  color: #348;
+  border: solid #348 1px;
 }
 
 /* Video */
 
 .video {
-    position: relative;
-    z-index: 1;
-    padding-bottom: 56.25%;
+  position: relative;
+  z-index: 1;
+  padding-bottom: 56.25%;
 }
 
 .video__media {
-  height: 100%;
   width: 100%;
+  height: auto;
+
+  position: absolute;
+  top: 0;
+  left: 0;
 }
