--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,5 @@
 /* Base */
+
 h1, h2 {
   margin: 0;
   padding: 0;
@@ -8,23 +9,28 @@ body {
   margin: 0;
   padding: 0;
   background-color: #333;
+
   font-size: 15px;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 /* Intro */
+
 .logo {
   position: absolute;
   margin: 50px 100px;
   z-index: 3;
+
   font-weight: 300;
   color: #348;
+
 }
 
 .intro {
   max-height: 100vh;
   overflow: hidden;
   position: relative;
+
   background-size: cover;
 }
 
@@ -33,7 +39,9 @@ body {
   display: block;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.9);
+
+  background-color: rgba(0, 0, 0, .9);
+
   position: absolute;
   top: 0;
   left: 0;
@@ -47,6 +55,7 @@ body {
   width: 100%;
   height: 100%;
   text-align: center;
+
   position: absolute;
   top: 0;
   left: 0;
@@ -63,6 +72,7 @@ body {
 .intro__subtitle {
   color: #fff;
   font-size: 35px;
+
   font-weight: 300;
 }
 
@@ -73,7 +83,9 @@ body {
   border: solid #fff 1px;
   text-decoration: none;
   color: #fff;
-  transition: color 0.2s linear, border 0.2s linear;
+
+  transition: color .2s linear, border .2s linear;
+
   margin: 0 auto;
 }
 
@@ -83,6 +95,7 @@ body {
 }
 
 /* Video */
+
 .video {
   position: relative;
   height: 100vh;
@@ -93,29 +106,27 @@ body {
 .video__media {
   width: 100%;
   height: auto;
+
   position: absolute;
   top: 0;
   left: 0;
 }
 
 @media (max-width: 900px) {
-  .logo {
-    left: 0;
-    right: 0;
-    text-align: center;
-  }
-
-  .intro__title {
-    font-size: 50px;
-  }
-
-  .intro__subtitle {
-    font-size: 20px;
-  }
-
-  .video__media {
-    transform: translate(-20%, 0);
-    width: 250%;
-    height: 100vh;
-  }
+    .logo {
+        left: 0;
+        right: 0;
+        text-align: center;
+    }
+    .intro__title {
+        font-size: 50px;
+    }
+    .intro__subtitle {
+        font-size: 20px;
+    }
+    .video__media {
+        transform: translate(-20%, 0);
+        width: 250%;
+        height: 100vh;
+    }
 }
