added first version of gallery

--- a/src/index.pug
+++ b/src/index.pug
@@ -17,4 +17,5 @@ html(lang="en")
                 .intro__inner 
                     h1.intro__title Welcome 
                     h2.intro__subtitle to my pixel art gallery
-                    a.intro__button(href="#") Watch more
+                    a.intro__button(href="#gallery") Watch more
+        include gallery.pug
