--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,10 +8,13 @@ h1, h2 {
 body {
   margin: 0;
   padding: 0;
-  background-color: #333;
-
+  background-color: #111;
   font-size: 15px;
   font-family: 'Roboto', sans-serif;
+}
+
+* {
+  scroll-behavior: smooth;
 }
 
 /* Intro */
@@ -21,7 +24,7 @@ body {
   margin: 50px 100px;
   z-index: 3;
 
-  font-weight: 300;
+  font-weight: 800;
   color: #348;
 
 }
@@ -112,6 +115,43 @@ body {
   left: 0;
 }
 
+// Gallery
+
+.gallery {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .gallery__title {
+    font-size: 50px;
+    color: #fff;
+    transform: translate(0, -100%);
+  }
+}
+.gallery__items {
+  display: grid;
+  grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
+  height: 80vh;
+  width: 80vh;
+  grid-gap: 5%;
+  .gallery__item {
+    background-color: rgb(116, 225, 255);
+    .item__img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transition: all .4s;
+
+      &:hover {
+        opacity: .7;
+      }
+    }
+  }
+}
+
+// Responsive
+
 @media (max-width: 900px) {
     .logo {
         left: 0;
@@ -128,5 +168,11 @@ body {
         transform: translate(-20%, 0);
         width: 250%;
         height: 100vh;
+    }
+    .gallery__items {
+      height: 45vh;
+      width: 45vh;
+      grid-gap: 5%;
+
     }
 }
