added new arts, now images can be downloaded

--- a/src/gallery.pug
+++ b/src/gallery.pug
@@ -2,20 +2,29 @@ main.gallery(id='gallery')
     h2.gallery__title Pixel Art
     .gallery__items
         .gallery__item
-            img.item__img(src="img/photo_2021-03-23_20-25-44.jpg", alt="")
+            a(href="img/photo_2021-03-23_20-25-44.jpg") 
+                img.item__img(src="img/photo_2021-03-23_20-25-44.jpg", alt="")
         .gallery__item
-            img.item__img(src="img/photo_2021-03-23_20-25-47.jpg", alt="")
+            a(href="img/photo_2021-03-23_20-25-47.jpg") 
+                img.item__img(src="img/photo_2021-03-23_20-25-47.jpg", alt="")
         .gallery__item
-            img.item__img(src="img/518916.jpg", alt="")
+            a(href="img/518916.jpg") 
+                img.item__img(src="img/518916.jpg", alt="")
         .gallery__item
-            img.item__img(src="img/705837.png", alt="")
+            a(href="img/dxv1d.jpg") 
+             img.item__img(src="img/dxv1d.jpg", alt="")
         .gallery__item
-            img.item__img(src="img/962060.png", alt="")
+            a(href="img/irl.jpg") 
+               img.item__img(src="img/irl.jpg", alt="")
         .gallery__item
-            img.item__img(src="img/1075415.jpg", alt="")
+            a(href="img/1075415.jpg")
+              img.item__img(src="img/1075415.jpg", alt="")
         .gallery__item
-            img.item__img(src="img/1138387.png", alt="")
+            a(href="img/1138387.png") 
+               img.item__img(src="img/1138387.png", alt="")
         .gallery__item
-            img.item__img(src="img/1130461.png", alt="")
+            a(href="img/1130461.png") 
+               img.item__img(src="img/1130461.png", alt="")
         .gallery__item
-            img.item__img(src="img/1132300.png", alt="")
+            a(href="img/1132300.png") 
+               img.item__img(src="img/1132300.png", alt="")
